--- a/src/main/res/layout/fragment_photo_gallery.xml
+++ b/src/main/res/layout/fragment_photo_gallery.xml
@@ -5,6 +5,6 @@
     android:id="@+id/photo_recycler_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PhotoGalaryActivity">
+    tools:context="com.example.photo_gallery.PhotoGalaryActivity">
 
 </android.support.v7.widget.RecyclerView>
